[package]
authors = ["Eirik Albrigtsen <ealbrigt@cisco.com>"]
name = "lal"
version = "3.4.2"

[[bin]]
doc = false
name = "lal"
path = "src/main.rs"

[dependencies]
ansi_term = "0.7.2"
chrono = "0.2"
clap = "2.11.2"
filetime = "0.1"
flate2 = "0.2"
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
log = "0.3.5"
loggerv = "0.4.0"
rand = "0.3.14"
regex = "0.1.55"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9.5"
sha1 = "0.2.0"
tar = "0.4.10"
walkdir = "1.0.7"
semver = "0.2.3"

[dependencies.indicatif]
optional = true
version = "0.3.3"

[features]
default = ["upgrade", "progress"]
upgrade = []
progress = ["indicatif"]

[lib]
name = "lal"
path = "src/lib.rs"

[[test]]
harness = false
name = "testmain"
