[package]
authors = ["Eirik Albrigtsen <ealbrigt@cisco.com>"]
name = "lal"
version = "3.7.0"
description = "A strict, language-agnostic build system and dependency manager"
license = "MIT"

[[bin]]
doc = false
name = "lal"
path = "src/main.rs"

[[test]]
harness = false
name = "testmain"

[dependencies]
ansi_term = "0.7.2"
chrono = "0.2"
clap = "2.11.2"
filetime = "0.1"
flate2 = "0.2"
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
log = "0.3.5"
loggerv = "0.4.0"
openssl-probe = "0.1.1"
rand = "0.3.14"
regex = "0.1.55"
semver = "0.2.3"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9.5"
sha1 = "0.2.0"
tar = "0.4.10"
walkdir = "1.0.7"

[dependencies.indicatif]
optional = true
version = "0.3.3"

[features]
default = [
    "progress",
]
progress = ["indicatif"]
upgrade = []

[lib]
name = "lal"
path = "src/lib.rs"
